--- a/css/fale-conosco.css
+++ b/css/fale-conosco.css
@@ -99,7 +99,7 @@ body {
 }
 
 .caixa-mae form {
-    max-width: 500px;
+    max-width: 400px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -130,6 +130,7 @@ body {
 form textarea {
     resize: none;
     max-height: 250px;
+    overflow: hidden;
 }
 
 form button {
@@ -143,6 +144,7 @@ form input.btn-button {
     font-weight: 700;
     cursor: pointer;
     margin-top: 40px;
+    transition: .2s ease-in-out;
 }
 
 form input.btn-button:hover {
