--- a/css/style.css
+++ b/css/style.css
@@ -134,10 +134,10 @@ p {
 input {
     height: 40px;
     border-radius: 5px;
-    /* border: 1px solid gray; */
+    border: 1px solid gray;
     border: none;
     padding-left: 8px;
-    outline: none;
+    outline-color: #bdbdbd;
     font-size: 14px;
     background-color: #313131c0;
     color: #FFFFFF;
@@ -147,10 +147,10 @@ textarea {
     width: 270px;
     height: 100px;
     border-radius: 5px;
-    /* border: 1px solid gray; */
+    border: 1px solid gray;
     border: none;
     padding-left: 8px;
-    outline: none;
+    outline-color: #bdbdbd;
     resize: none;
     max-height: 350px;
     font-size: 14px;
